examples/valid/calculator.lby
fn add x i64 y i64 -> i64
    x + y

fn multiply x i64 y i64 -> i64
    x * y

fn main -> i64
    let subtotal i64 = add(7, 5)
    multiply(subtotal, 3)
