examples/invalid/type_mismatch.lby
fn main -> i64
    let value i64 = "oops"
    value
